# my-first-game-sfml

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: aircraft.cpp  entity.cpp  game.cpp  game.hpp  main.cpp  resource_holder.hpp  resource_holder.inl  scene_node.cpp  sprite_node.cpp  texture_holder.cpp  texture_holder.hpp  textures.hpp  world.cpp
src/include/: aircraft.hpp  entity.hpp  game.hpp  resource_holder.hpp  resource_holder.inl  resource_identifiers.hpp  scene_node.hpp  sprite_node.hpp  texture_identifiers.hpp  world.hpp
